--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Form Page Title</title>
+  <title>Apply Now</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
+    iframe {
+      width: 100vw;
+      height: 100vh;
+      border: none;
+    }
+  </style>
 </head>
-<body style="margin:0; padding:0;">
-
-    <!-- JotForm iFrame Embed -->
-    <iframe 
-        src="https://form.jotform.com/yourformid" 
-        width="100%" 
-        height="600px" 
-        frameborder="0" 
-        style="border:none;" 
-        scrolling="no">
-    </iframe>
-
+<body>
+  <iframe src="https://form.jotform.com/241305482175554"></iframe>
 </body>
 </html>
